<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>robot_guardian</name>
    <version>3.0.0</version>
    <description>Robot Guardian Demo</description>
    <maintainer email="oscar.martinez@pal-robotics.com">Oscar Martinez</maintainer>

    <license>PAL Robotics S.L.</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <build_depend>rclcpp</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>rclcpp_components</build_depend>
    <build_depend>hri_msgs</build_depend>
    <build_depend>hri</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>tf2</build_depend>

    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>hri_msgs</exec_depend>
    <exec_depend>rclcpp</exec_depend>
    <exec_depend>hri</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>tf2</exec_depend>
    <exec_depend>rqt-image-view</exec_depend>
    <exec_depend>rqt</exec_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>ament_cmake_gtest</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
